--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,13 +1,13 @@
 ---
 engines:
   fixme:
-    enabled: true
+    enabled: false
   gofmt:
     enabled: false
   golint:
-    enabled: true
+    enabled: false
   govet:
-    enabled: true
+    enabled: false
   markdownlint:
     enabled: true
     checks:
