updated jpg image

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -38,6 +38,7 @@ jobs:
   plan:
   - get: my-go-examples
     trigger: true
+    passed: [job-readme-github-pages]
   - put: resource-slack-alert
     params:
       channel: '#jeff-builds'
