--- a/.gitignore
+++ b/.gitignore
@@ -12,14 +12,10 @@ coverage.out
 *.jpg:Zone.Identifier
 
 # Ignore binaries
-**/bin/hello-go
+# **/bin/hello-go
 
 # Ignore test coverage
 **/test/test_coverage.txt
 
 # Ignore binary used for docker build
-**/build-push/hello-go
-
-# TEMPORARY AS I REVAMP REPO
-/eraseme
-eraseme-README.md
+# **/build/hello-go
