--- a/ci/tasks/task-unit-tests.yml
+++ b/ci/tasks/task-unit-tests.yml
@@ -2,17 +2,18 @@
 
 platform: linux
 
+# DOCKER BASE IMAGE FOR TASKS (BASED ON ALPINE, A SMALLER LINUX DISTRIBUTION)
 image_resource:
   type: docker-image
   source:
     repository: golang
-    tag: 1.7.1
+    tag: 1.20.1
 
 inputs:
-- name: my-go-examples
+  - name: my-go-examples
 
 outputs:
-- name: coverage-results
+  - name: coverage-results
 
 run:
   path: ./my-go-examples/ci/scripts/unit-tests.sh
