fixing README typos

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -61,3 +61,4 @@ exclude_patterns:
 - "**/goroutines/goroutines-multi-core/main.go" #doWork` has 72 lines of code
 - "**/common-go/my-generic-go-template/jeffs-basic-go-template/main.go" #getNumbers` has 5 return statements
 - "**/goroutines/goroutines-multi-core/README.md" #Line length
+- "**/common-go/error-reporting/error-example/README.md" #Line length
