updated ci pipeline with github-status-resource

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -117,8 +117,8 @@ resource_types:
   - name: github-status
     type: docker-image
     source:
-      repository: dpb587/github-status-resource
-      tag: master
+      repository: jeffdecola/github-status-resource-clone
+      tag: v0.0.2
 
 #------------------------------------------------------------------------------------------
 resources:
@@ -144,3 +144,4 @@ resources:
     source:
       repository: jeffdecola/my-go-examples 
       access_token: ((repo_github_token))
+      branch: master
